--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^7.4",
         "troovers/browser": "^1.0.0",
         "ramsey/uuid": "^3.8",
         "doctrine/orm": "^2.5",
@@ -24,19 +24,19 @@
         "league/flysystem-sftp": "^1.0",
         "php-http/guzzle6-adapter": "^2.0",
         "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/translation": "^4.4",
+        "symfony/translation": "^4.4|^5.0",
         "symfony/orm-pack": "^1.0",
-        "symfony/form": "^4.4",
-        "symfony/twig-bundle": "^4.4",
-        "symfony/templating": "^4.4",
-        "symfony/validator": "^4.4",
-        "symfony/serializer": "^4.4",
+        "symfony/form": "^4.4|^5.0",
+        "symfony/twig-bundle": "^4.4|^5.0",
+        "symfony/templating": "^4.4|^5.0",
+        "symfony/validator": "^4.4|^5.0",
+        "symfony/serializer": "^4.4|^5.0",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "symfony/proxy-manager-bridge": "^4.4",
-        "symfony/expression-language": "^4.4",
+        "symfony/proxy-manager-bridge": "^4.4|^5.0",
+        "symfony/expression-language": "^4.4|^5.0",
         "composer/semver": "^1.4",
-        "symfony/dotenv": "^4.4",
-        "symfony/mime": "^4.4",
+        "symfony/dotenv": "^4.4|^5.0",
+        "symfony/mime": "^4.4|^5.0",
         "myclabs/php-enum": "^1.7",
         "trikoder/oauth2-bundle": "^3.2",
         "nyholm/psr7": "^1.3",
@@ -44,7 +44,7 @@
     },
     "require-dev": {
         "nelmio/alice": "^3.5.0",
-        "symfony/phpunit-bridge": "^4.4"
+        "symfony/phpunit-bridge": "^4.4|^5.0"
     },
     "autoload": {
         "psr-4": {
