--- a/composer.json
+++ b/composer.json
@@ -38,9 +38,10 @@
         "symfony/dotenv": "^4.4|^5.0",
         "symfony/mime": "^4.4|^5.0",
         "myclabs/php-enum": "^1.7",
-        "trikoder/oauth2-bundle": "^3.2",
         "nyholm/psr7": "^1.3",
-        "symfony/webpack-encore-bundle": "^1.12"
+        "symfony/webpack-encore-bundle": "^1.12",
+        "symfony/security-bundle": "^5.4",
+        "league/oauth2-server-bundle": "^0.3.0"
     },
     "require-dev": {
         "nelmio/alice": "^3.5.0",
