Fixed translation bugfixes

--- a/src/Resources/config/routing/web.yaml
+++ b/src/Resources/config/routing/web.yaml
@@ -394,7 +394,7 @@ translations_delete:
   path: /translations/delete
   defaults:
     _controller: Pronto\MobileBundle\Controller\Web\TranslationController::deleteAction
-
+  condition: "context.getMethod() in ['POST']"
 
 #### APP VERSIONS ####
 
