--- a/composer.json
+++ b/composer.json
@@ -13,34 +13,34 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4",
-        "troovers/browser": "^1.0.0",
+        "php": "^8.1",
+        "troovers/browser": "^1.1",
         "ramsey/uuid": "^3.8",
         "doctrine/orm": "^2.5",
         "awps/font-awesome-php": "^4.7",
         "guzzlehttp/guzzle": "^7.4",
         "kreait/firebase-php": "^6.6",
         "league/flysystem": "^1.0",
-        "league/flysystem-sftp": "^1.0",
         "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/translation": "^4.4|^5.0",
+        "symfony/translation": "^5.4",
         "symfony/orm-pack": "^1.0",
-        "symfony/form": "^4.4|^5.0",
-        "symfony/twig-bundle": "^4.4|^5.0",
-        "symfony/templating": "^4.4|^5.0",
-        "symfony/validator": "^4.4|^5.0",
-        "symfony/serializer": "^4.4|^5.0",
+        "symfony/form": "^5.4",
+        "symfony/twig-bundle": "^5.4",
+        "symfony/templating": "^5.4",
+        "symfony/validator": "^5.4",
+        "symfony/serializer": "^5.4",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "symfony/proxy-manager-bridge": "^4.4|^5.0",
-        "symfony/expression-language": "^4.4|^5.0",
+        "symfony/proxy-manager-bridge": "^5.4",
+        "symfony/expression-language": "^5.4",
         "composer/semver": "^1.4",
-        "symfony/dotenv": "^4.4|^5.0",
-        "symfony/mime": "^4.4|^5.0",
+        "symfony/dotenv": "^5.4",
+        "symfony/mime": "^5.4",
         "myclabs/php-enum": "^1.7",
         "nyholm/psr7": "^1.3",
         "symfony/webpack-encore-bundle": "^1.12",
         "symfony/security-bundle": "^5.4",
-        "league/oauth2-server-bundle": "^0.3.0"
+        "league/oauth2-server-bundle": "^0.5",
+        "symfony/routing": "^5.4"
     },
     "require-dev": {
         "nelmio/alice": "^3.5.0",
