--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,6 @@
         "guzzlehttp/guzzle": "^7.4",
         "kreait/firebase-php": "^6.6",
         "league/flysystem": "^1.0",
-        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "^5.4",
         "symfony/orm-pack": "^1.0",
         "symfony/form": "^5.4",
@@ -40,7 +39,8 @@
         "symfony/webpack-encore-bundle": "^1.12",
         "symfony/security-bundle": "^5.4",
         "league/oauth2-server-bundle": "^0.5",
-        "symfony/routing": "^5.4"
+        "symfony/routing": "^5.4",
+        "symfony/mailer": "^6.1"
     },
     "require-dev": {
         "nelmio/alice": "^3.5.0",
