--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
     "require": {
         "php": "^8.1",
         "troovers/browser": "^1.1",
-        "ramsey/uuid": "^3.8",
-        "doctrine/orm": "^2.5",
+        "ramsey/uuid": "^3.9",
+        "doctrine/orm": "^2.17",
         "awps/font-awesome-php": "^4.7",
-        "guzzlehttp/guzzle": "^7.4",
-        "kreait/firebase-php": "^6.6",
+        "guzzlehttp/guzzle": "^7.8",
+        "kreait/firebase-php": "^7.0",
         "league/flysystem": "^1.0",
         "symfony/translation": "^5.4",
         "symfony/orm-pack": "^1.0",
@@ -31,12 +31,11 @@
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "symfony/proxy-manager-bridge": "^5.4",
         "symfony/expression-language": "^5.4",
-        "composer/semver": "^1.4",
+        "composer/semver": "^3.4",
         "symfony/dotenv": "^5.4",
         "symfony/mime": "^5.4",
         "myclabs/php-enum": "^1.7",
         "nyholm/psr7": "^1.3",
-        "symfony/webpack-encore-bundle": "^1.12",
         "symfony/security-bundle": "^5.4",
         "league/oauth2-server-bundle": "^0.5",
         "symfony/routing": "^5.4",
@@ -45,12 +44,17 @@
     },
     "require-dev": {
         "nelmio/alice": "^3.5.0",
-        "symfony/phpunit-bridge": "^4.4|^5.0"
+        "symfony/phpunit-bridge": "^5.4"
     },
     "autoload": {
         "psr-4": {
             "Pronto\\MobileBundle\\": "src/",
             "Pronto\\MobileBundle\\Tests\\": "Tests/"
+        }
+    },
+    "config": {
+        "platform": {
+            "php": "8.1"
         }
     },
     "minimum-stability": "dev",
