--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "test": "tests"
   },
   "dependencies": {
-    "@symfony/webpack-encore": "^1.5.0",
     "ajv": "^6.5.2",
     "chart.js": "^2.9.4",
     "codeflask": "^0.3.0",
@@ -18,23 +17,16 @@
     "trumbowyg": "^2.24.0"
   },
   "devDependencies": {
-    "@bit/e-sites.vue.global.form": "^1.3.10",
-    "@bit/e-sites.vue.global.table": "^2.1.2",
     "axios": "^0.21.1",
-    "css-loader": "^1.0.1",
-    "element-ui": "^2.15.3",
-    "file-loader": "^1.1.11",
+    "css-loader": "^6.0.0",
+    "file-loader": "^6.0.0",
     "lodash": "^4.17.21",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "resolve-url-loader": "2.3.1",
     "sass": "^1.35.1",
     "sass-loader": "^10.2.0",
-    "style-loader": "^0.21.0",
-    "vue": "^2.6.14",
-    "vue-i18n": "^8.24.5",
-    "vue-loader": "^15.9.7",
-    "vue-template-compiler": "^2.6.14"
+    "style-loader": "^0.21.0"
   },
   "scripts": {
     "development": "mix",
