--- a/src/Resources/public/mix-manifest.json
+++ b/src/Resources/public/mix-manifest.json
@@ -1,33 +1,31 @@
 {
-    "/js/app.js": "/js/app.js?id=1029becf5d3476232488",
-    "/js/modal.js": "/js/modal.js?id=d6fb19d3cf1eee755d14",
-    "/js/error.js": "/js/error.js?id=afd5f34ef24909ca79bc",
-    "/js/login.js": "/js/login.js?id=8e8cea045134a512aa22",
-    "/js/trumbowyg.js": "/js/trumbowyg.js?id=56e434ee0f7168b43761",
-    "/js/codeflask.js": "/js/codeflask.js?id=45345083a917dc5b4717",
-    "/js/jscolor.js": "/js/jscolor.js?id=33847348accb10fd0c22",
-    "/js/plugins.js": "/js/plugins.js?id=bbbc81eb8a73089fdf25",
-    "/build/js/app.js": "/build/js/app.js?id=df3adac78f55ab3303aa",
-    "/js/notifications/statistics.js": "/js/notifications/statistics.js?id=63ea4b902c826b2193d8",
-    "/js/notifications/notifications.js": "/js/notifications/notifications.js?id=85a980e4c6a4c78fbd2b",
-    "/js/applications/applications.js": "/js/applications/applications.js?id=644b65dd14b3854a65b6",
-    "/js/customers/customers.js": "/js/customers/customers.js?id=5bf48bbbdd4ecc7d3acf",
-    "/js/collections/collections.js": "/js/collections/collections.js?id=9cb60784cf3797d48416",
-    "/js/collections/properties.js": "/js/collections/properties.js?id=8ac912d0395353cc1cbd",
-    "/js/collections/entries.js": "/js/collections/entries.js?id=6d3171237584d29d49ba",
-    "/js/collections/relationships.js": "/js/collections/relationships.js?id=7595787266ad264b9a1b",
-    "/js/configurations/configurations.js": "/js/configurations/configurations.js?id=a80bb267a2ffdc0903b2",
-    "/build/css/app.css": "/build/css/app.css?id=92f7356c1e6e0931c8bb",
-    "/css/error.css": "/css/error.css?id=d807e2b1379154003963",
-    "/css/app.css": "/css/app.css?id=e93b10eb3fcae0a97c0d",
-    "/css/login.css": "/css/login.css?id=7b7600a002cf52c0025d",
-    "/css/codeflask.css": "/css/codeflask.css?id=2e64d431b35c564ede2f",
-    "/css/select2.css": "/css/select2.css?id=652c4a11b3c1c29cbc6b",
-    "/css/trumbowyg.css": "/css/trumbowyg.css?id=98c8ff81acd04847a4bb",
-    "/css/collections/collections.css": "/css/collections/collections.css?id=93b23791ce23f5c51e2a",
-    "/images/logo-login.png": "/images/logo-login.png?id=8c0fd3ec531e9a789aef",
-    "/images/logo-sidemenu.png": "/images/logo-sidemenu.png?id=efde32125ca7011b84eb",
-    "/images/favicon.ico": "/images/favicon.ico?id=be3d6659ae8804bf2662",
-    "/libraries/select2/js/select2.min.js": "/libraries/select2/js/select2.min.js?id=26abb17f4b7260ea8c91",
-    "/libraries/jquery-ui/js/jquery-ui.min.js": "/libraries/jquery-ui/js/jquery-ui.min.js?id=77293ba616f8f4e3bf40"
+    "/js/app.js": "/js/app.js?id=46d00120521de4e5cbe0d86c22ee96b6",
+    "/js/modal.js": "/js/modal.js?id=899e9c499674e5d1aef054d5bafd0206",
+    "/js/error.js": "/js/error.js?id=e971c7511a8d2fb4fead4dfe10ccd682",
+    "/js/login.js": "/js/login.js?id=f2d813dfe416f3aaae4b7770f601b9f8",
+    "/js/trumbowyg.js": "/js/trumbowyg.js?id=451e495cc5ba0e679825c059e8bf3d22",
+    "/js/codeflask.js": "/js/codeflask.js?id=e243ac4cf9d8b5b12a857db23d4560df",
+    "/js/jscolor.js": "/js/jscolor.js?id=4c631edc15d05a06bde09316ea578984",
+    "/js/plugins.js": "/js/plugins.js?id=de012536763abdb634fdd02d844a2527",
+    "/js/notifications/statistics.js": "/js/notifications/statistics.js?id=4839dd02a137dbb2ac95a268c5fd0f6c",
+    "/js/notifications/notifications.js": "/js/notifications/notifications.js?id=056d9ecb8326a6647191fee6abfaa740",
+    "/js/applications/applications.js": "/js/applications/applications.js?id=4774b105eb3399de61e6df3b8311cfe4",
+    "/js/customers/customers.js": "/js/customers/customers.js?id=bdacd462d95a9b1204b7f4be0e59af1b",
+    "/js/collections/collections.js": "/js/collections/collections.js?id=706e26a182335a19c2a946cd5538cae3",
+    "/js/collections/properties.js": "/js/collections/properties.js?id=da744b8e1ed3cda781d9c2f573083a9c",
+    "/js/collections/entries.js": "/js/collections/entries.js?id=af223721cab7cc9bea1aeca6e227aba4",
+    "/js/collections/relationships.js": "/js/collections/relationships.js?id=e9a904f959b50aaad4f11dcb1c78544d",
+    "/js/configurations/configurations.js": "/js/configurations/configurations.js?id=4a6cd63da2fe0e939f1cd38bc736cb44",
+    "/css/codeflask.css": "/css/codeflask.css?id=2e64d431b35c564ede2fe45a763ba6ec",
+    "/css/error.css": "/css/error.css?id=d807e2b1379154003963885f37efe86c",
+    "/css/app.css": "/css/app.css?id=e93b10eb3fcae0a97c0d2fb7e1ea4a86",
+    "/css/login.css": "/css/login.css?id=7b7600a002cf52c0025d34c632ea8fd3",
+    "/css/trumbowyg.css": "/css/trumbowyg.css?id=98c8ff81acd04847a4bbbe2817974d9b",
+    "/css/select2.css": "/css/select2.css?id=652c4a11b3c1c29cbc6b2d2f1239114c",
+    "/css/collections/collections.css": "/css/collections/collections.css?id=93b23791ce23f5c51e2ae7c8ead42a4b",
+    "/images/logo-login.png": "/images/logo-login.png?id=8c0fd3ec531e9a789aef0f011cee0315",
+    "/images/logo-sidemenu.png": "/images/logo-sidemenu.png?id=efde32125ca7011b84eb3689b0c04223",
+    "/images/favicon.ico": "/images/favicon.ico?id=be3d6659ae8804bf2662b024a8674d87",
+    "/libraries/select2/js/select2.min.js": "/libraries/select2/js/select2.min.js?id=26abb17f4b7260ea8c912313e2c80fef",
+    "/libraries/jquery-ui/js/jquery-ui.min.js": "/libraries/jquery-ui/js/jquery-ui.min.js?id=77293ba616f8f4e3bf4030dddc69523b"
 }
