--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -19,12 +19,12 @@ services:
     autowire: false
     public: true
     arguments:
-      - '@request_stack'
       - '@doctrine.orm.entity_manager'
+      - '@request_stack'
       - []
 
   Pronto\MobileBundle\:
-    resource: '../../{Command,Controller,DataFixtures,EventListener,Middleware,Provider,Security,Service,Repository,Validator}'
+    resource: '../../{Command,Controller,DataFixtures,EventListener,EventSubscriber,Middleware,Provider,Security,Service,Repository,Validator}'
     exclude: '../../Service/ProntoMobile.php'
 
   #### TWIG EXTENSIONS ####
