--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -14,6 +14,9 @@ services:
     # if you need to do this, you can override this setting on individual services
     public: false
 
+  Pronto\MobileBundle\Grant\ProntoClientCredentialsGrant: ~
+  Pronto\MobileBundle\Grant\ProntoPasswordGrant: ~
+
   # Don't autowire, because the third argument is being set in the ProntoMobileExtension class
   Pronto\MobileBundle\Service\ProntoMobile:
     autowire: false
@@ -44,3 +47,12 @@ services:
 
   pronto_mobile_app_user_provider:
     class: Pronto\MobileBundle\Provider\AppUserProvider
+
+  Pronto\MobileBundle\EventListener\OAuth\UserResolveListener:
+    arguments:
+      - '@pronto_mobile_app_user_provider'
+      - '@security.password_hasher'
+      - '@doctrine.orm.entity_manager'
+      - '@security.token_storage'
+    tags:
+      - { name: kernel.event_listener, event: league.oauth2_server.event.user_resolve, method: onUserResolve }
